Fix chart overflow on load with max-height style.

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -21,8 +21,8 @@ div.custom-chip {
   line-height: 32px;
   margin: 8px 8px 0 0;
   padding: 0 4px 0 12px;
-  background: rgb(224,224,224);
-  color: rgb(66,66,66);
+  background: rgb(224, 224, 224);
+  color: rgb(66, 66, 66);
 }
 
 div.custom-chip-contents {
@@ -45,17 +45,27 @@ button.chip-remove-container {
   padding: 0;
   margin-top: 4px;
   transition: background 0.15s linear;
-  display: block; }
+  display: block;
+}
+
 button.chip-remove-container .chip-remove-icon {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0) scale(0.7);
   color: white;
-  fill: white; }
+  fill: white;
+}
+
 button.chip-remove-container:hover, button.chip-remove-container:focus {
-  background: rgba(255, 0, 0, 0.8); }
+  background: rgba(255, 0, 0, 0.8);
+}
 
 * {
   outline: 0;
+}
+
+.chart-wrapper,
+#chart1 {
+  max-height: 950px;
 }
